功能更新，bug修复。

--- a/src/main/resources/static/pc/commons/css/style.css
+++ b/src/main/resources/static/pc/commons/css/style.css
@@ -11,7 +11,7 @@
 
 .card-clear-420 {
     border: 0;
-    width: 420px;
+    max-width: 420px;
     margin: 13px;
     background-color: #eeeeee;
 
@@ -23,7 +23,7 @@
 }
 
 .pc-body {
-    padding-top: 13px;
+    padding: 13px 0;
 }
 
 .pc-header {
@@ -48,6 +48,15 @@
 .pc-header-login {
     display: flex;
     justify-content: space-around;
+}
+
+.pc-header-login-username {
+    display: block;
+    padding-right: 0;
+    width: 80px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .pc-header-login-item {
